[tool.poetry]
name = "python-polls"
version = "0.1.0"
description = ""
authors = ["gwenf <gwenfaraday@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
