[tool.poetry]
name = "python-polls"
version = "0.1.0"
description = ""
authors = ["gwenf <gwenfaraday@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.23"
databases = "^0.4.1"
alembic = "^1.5.5"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
